[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.hatch.metadata]
allow-direct-references = true

[tool.poetry]
name = "breatheit"
version = "0.0.1"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.11"
plotly = "6.0.1"
dash = "3.0.4"
pandas = "2.2.3"
cdsapi = "0.7.5"
xarray = "2025.4.0"
numpy = "2.2.5"
netCDF4 = "1.7.2"
pyyaml = "6.0.2"